--- a/package.json
+++ b/package.json
@@ -1,28 +1,19 @@
 {
-  "name": "glitch-hello-node",
-  "version": "0.0.1",
-  "description": "A simple Node app built on fastify, instantly up and running. Built to be remixed on Glitch.com.",
-  "main": "server.js",
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "fastify": "^3.27.4",
-    "fastify-formbody": "^5.2.0",
-    "fastify-static": "^4.6.1",
-    "handlebars": "^4.7.7",
-    "point-of-view": "^5.2.0"
-  },
-  "engines": {
-    "node": "12.x"
-  },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/glitch-hello-node"
-  },
-  "license": "MIT",
-  "keywords": [
-    "node",
-    "glitch",
-    "express"
-  ]
+    "ark.db": "^2.7.1",
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "discord.js": "^13.6.0",
+    "express": "^4.17.3"
+  }
 }
