--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +15,8 @@
     "cors": "^2.8.5",
     "discord.js": "^13.6.0",
     "express": "^4.17.3"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
